# nemotron-nano-v3-lora

./: .gitignore  AGENTS.md  README.md  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_model_loading.ipynb  03_training.ipynb
outputs/: training_config.json
scripts/: evaluate.py  merge_lora.py  train_multigpu.py  train_unsloth.py
