[project]
name = "nemotron-nano-v3-lora"
version = "0.1.0"
description = "LoRA fine-tuning of Nemotron-3-Nano-30B on medical Q&A data"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

# Dependencies added incrementally as needed
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "causal-conv1d>=1.4.0",
    "datasets>=4.5.0",
    "ipykernel>=7.1.0",
    "mamba-ssm>=2.2.2",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "transformers>=5.0.0",
]

[tool.uv]
python-preference = "system"
