[project]
name = "nemotron-nano-v3-lora"
version = "0.1.0"
description = "LoRA fine-tuning of Nemotron-3-Nano-30B on medical Q&A data"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

# Dependencies added incrementally as needed
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "ipykernel>=7.1.0",
    "mamba-ssm>=2.3.0",
    "peft>=0.18.1",
    "tensorboardx>=2.6.4",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=5.0.0",
    "trl>=0.27.1",
]

[project.optional-dependencies]
# Unsloth for 2-3x faster training (install with: uv pip install -e ".[unsloth]")
unsloth = [
    "unsloth>=2024.12",
    "xformers",
]

[tool.uv]
python-preference = "system"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
