[project]
name = "nemotron-nano-v3-lora"
version = "0.1.0"
description = "LoRA fine-tuning of Nemotron-3-Nano-30B on medical Q&A data"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

# Dependencies added incrementally as needed
# Let unsloth manage transformers/trl/peft versions for compatibility
dependencies = [
    "ipykernel>=7.1.0",
    "mamba-ssm>=2.3.0",
    "tensorboardx>=2.6.4",
    "torch>=2.9.0",
    "unsloth>=2026.1.4",  # Latest unsloth - manages its own deps
]

[project.optional-dependencies]
# Unsloth for 2-3x faster training (install with: uv pip install -e ".[unsloth]")
unsloth = [
    "unsloth>=2024.12",
    "xformers",
]

[tool.uv]
python-preference = "system"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
